ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rest-creditscore-ing
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
#  tls:
#  - secretName: tls-secret
  rules:
  - http:
      paths:
      - backend:
          serviceName: rest-creditscore-svc
          servicePort: 8088
